# transcriber

./: .gitignore  .pre-commit-config.yaml  LICENSE  PLAN.md  README.md  docker-compose.yml  reproduce_issue.js
backend/: .env.example  README.md  alembic.ini  pyproject.toml  requirements.txt  requirements.txt.bak  run.py
backend/alembic/: env.py
backend/alembic/versions/: 20250205_001_add_diarization_columns.py  20260206_124100_3b2aa721a280_add_is_hallucination_column.py  20260209_093933_4d7703169c33_initial_migration.py  20260209_113645_c597ca42f8c9_add_ai_suggestions_to_transcription.py  20260209_122032_65ba55930284_add_ai_model_to_transcription.py
backend/app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: ai_assistant.py  conversations.py  transcriptions.py
backend/app/services/: ai_assistant.py  conversation_service.py  diarizer.py  file_manager.py  interfaces.py  transcriber.py  transcription_service.py
backend/models/: .gitkeep  DOWNLOAD_INSTRUCTIONS.md
backend/models/pyannote/plda/: plda.npz  xvec_transform.npz
backend/models/pyannote/speaker-diarization-3.1/: config.yaml
backend/scripts/: add_context_column.py  download_models.py
backend/tests/: test_main.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/new_design_001/dashboard/: code.html
frontend/new_design_001/settings/: code.html
frontend/new_design_001/transcription_&_diarization/: code.html  upload_code.html
frontend/src/: App.jsx  index.css
frontend/src/components/: AIAssistant.jsx  Header.jsx  (+15 more)
(+12 files in other folders)
